test/fail/void3.min
program
    function void hello do 123!
start
    if hello > 123 then
        123 !
    fi
end
